[package]
name = "terrawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.25" # Use the latest version available
url = "2.2" # Use the latest version available
async-std = "1.9" # Use the latest version available
surf = "2.3" # Use the latest version available
